# backend

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: pull_request_template.md  이슈-생성-템플릿.md
.github/workflows/: CD.yml  CI.yml
Payment/entity/: payment.py
Payment_History/entity/: payment_history.py
Refund/entity/: refund.py
Terraform/: main.tf
Terraform/EC2/: main.tf
app/common/: base.py  consts.py
infra/: README.md
infra/nginx/: compose.yml  index.html  nginx.conf
migrations/models/: 0_20241016182533_init.py  0_20241021183806_init.py  1_20241022105753_user_table_update.py
src/: main.py
src/app/api/: root_routes.py
src/app/api/v1_routes/: user.py
src/app/v1/alert/entity/: alert.py
src/app/v1/book/entity/: book.py  bookseat.py
src/app/v1/book/schemas/: book.py
src/app/v1/cinema/entity/: cinema.py
src/app/v1/favorite/entity/: favorite.py
src/app/v1/location/entity/: location.py
src/app/v1/movie/entity/: actor_image.py  movie.py
src/app/v1/payment/entity/: payment.py  payment_history.py
src/app/v1/refund/entity/: refund.py
src/app/v1/review/entity/: review.py
src/app/v1/screen/entity/: screen.py  screen_info.py  seat.py
src/app/v1/screen_info/entity/: screen_info.py
src/app/v1/seat/entity/: seat.py
src/app/v1/user/entity/: alert.py  (+14 more)
src/common/: post_construct.py
src/common/models/: base_model.py  consts.py
src/common/models/base_models/: BaseModel.py  constant.py
src/core/: config.py  security.py
src/core/configs/: database_config.py
src/core/database/: connection.py
(+2 files in other folders)
